{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 148,
  "lineage": "85b57603-5d4f-410e-3ec3-94efd9ba4a17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045dc4216881f59e7",
            "arn": "arn:aws:ec2:eu-west-3:131674823919:elastic-ip/eipalloc-045dc4216881f59e7",
            "association_id": "eipassoc-0e276ced61f9b41fd",
            "domain": "vpc",
            "id": "eipalloc-045dc4216881f59e7",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0f8ce1536c073dfa3",
            "private_dns": "ip-10-1-1-197.eu-west-3.compute.internal",
            "private_ip": "10.1.1.197",
            "public_dns": "ec2-35-181-221-131.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.221.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-eip-1",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-eip-1",
              "Project": "microservices-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d2056bd00d6506a",
            "arn": "arn:aws:ec2:eu-west-3:131674823919:elastic-ip/eipalloc-09d2056bd00d6506a",
            "association_id": "eipassoc-0d48ba5817175167f",
            "domain": "vpc",
            "id": "eipalloc-09d2056bd00d6506a",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-09c53c86e37030807",
            "private_dns": "ip-10-1-10-6.eu-west-3.compute.internal",
            "private_ip": "10.1.10.6",
            "public_dns": "ec2-35-181-46-197.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.46.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-eip-2",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-eip-2",
              "Project": "microservices-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:internet-gateway/igw-0f0b6201dd66c4fae",
            "id": "igw-0f0b6201dd66c4fae",
            "owner_id": "131674823919",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-igw",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-igw",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-prod-alb/4b78b81f9956fd96",
            "arn_suffix": "app/microservices-p-prod-alb/4b78b81f9956fd96",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "microservices-p-prod-alb-1775082815.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-prod-alb/4b78b81f9956fd96",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices-p-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033a2213ff17240c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056f6a43789020d50"
              },
              {
                "subnet_id": "subnet-0d584ff3192cc9ca5"
              }
            ],
            "subnets": [
              "subnet-056f6a43789020d50",
              "subnet-0d584ff3192cc9ca5"
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:listener/app/microservices-p-prod-alb/4b78b81f9956fd96/8510cadf64747495",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-prod-trf/27f06f6581cf3de8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:listener/app/microservices-p-prod-alb/4b78b81f9956fd96/8510cadf64747495",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-prod-alb/4b78b81f9956fd96",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "microservices-platform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.traefik",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-prod-trf/27f06f6581cf3de8",
            "arn_suffix": "targetgroup/microservices-p-prod-trf/27f06f6581cf3de8",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,404",
                "path": "/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-prod-trf/27f06f6581cf3de8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-prod-alb/4b78b81f9956fd96"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "microservices-p-prod-trf",
            "port": 30080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-traefik-tg",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-traefik-tg",
              "Project": "microservices-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045dc4216881f59e7",
            "association_id": "eipassoc-0e276ced61f9b41fd",
            "connectivity_type": "public",
            "id": "nat-05360b1991c9bdfe9",
            "network_interface_id": "eni-0f8ce1536c073dfa3",
            "private_ip": "10.1.1.197",
            "public_ip": "35.181.221.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-056f6a43789020d50",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-1",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-1",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d2056bd00d6506a",
            "association_id": "eipassoc-0d48ba5817175167f",
            "connectivity_type": "public",
            "id": "nat-0393d640d2645bcdb",
            "network_interface_id": "eni-09c53c86e37030807",
            "private_ip": "10.1.10.6",
            "public_ip": "35.181.46.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d584ff3192cc9ca5",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-2",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-nat-2",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-0c0de7617ecf98ae9",
            "id": "rtb-0c0de7617ecf98ae9",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05360b1991c9bdfe9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-rt-1",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-rt-1",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-02f1066ae5bbfd488",
            "id": "rtb-02f1066ae5bbfd488",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0393d640d2645bcdb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-rt-2",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-rt-2",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-031ac6579ce2cd5b6",
            "id": "rtb-031ac6579ce2cd5b6",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05360b1991c9bdfe9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-rt-1",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-rt-1",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-02d10d947390eb8f7",
            "id": "rtb-02d10d947390eb8f7",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0393d640d2645bcdb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-rt-2",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-rt-2",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-018d8e97d4ded3b75",
            "id": "rtb-018d8e97d4ded3b75",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0b6201dd66c4fae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-rt",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-rt",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067a1a8633afeb6f2",
            "route_table_id": "rtb-0c0de7617ecf98ae9",
            "subnet_id": "subnet-09ffa33eda5c667cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_eks",
            "aws_subnet.private_eks",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d14cbbc015247d0",
            "route_table_id": "rtb-02f1066ae5bbfd488",
            "subnet_id": "subnet-041914bd41719d964"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_eks",
            "aws_subnet.private_eks",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf14524fbe654c34",
            "route_table_id": "rtb-031ac6579ce2cd5b6",
            "subnet_id": "subnet-053e991a1cd14f187"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rds",
            "aws_subnet.private_rds",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbbeb552f12fbe97",
            "route_table_id": "rtb-02d10d947390eb8f7",
            "subnet_id": "subnet-0538557ffd496428b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rds",
            "aws_subnet.private_rds",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05326a214fc553c27",
            "route_table_id": "rtb-018d8e97d4ded3b75",
            "subnet_id": "subnet-056f6a43789020d50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05701a5b61ce490df",
            "route_table_id": "rtb-018d8e97d4ded3b75",
            "subnet_id": "subnet-0d584ff3192cc9ca5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-033a2213ff17240c7",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033a2213ff17240c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-platform-prod-alb-2025121009365845360000000e",
            "name_prefix": "microservices-platform-prod-alb-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb-sg",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb-sg",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-0a82563f538c07e8a",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a82563f538c07e8a",
            "ingress": [],
            "name": "microservices-platform-prod-eks-cluster-2025121009365789910000000d",
            "name_prefix": "microservices-platform-prod-eks-cluster-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-eks-cluster-sg",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-eks-cluster-sg",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-01f020a2737bdbe0a",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f020a2737bdbe0a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach nodes",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033a2213ff17240c7"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic to Traefik",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033a2213ff17240c7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a82563f538c07e8a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic to Traefik",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033a2213ff17240c7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "microservices-platform-prod-eks-nodes-20251210093700835400000011",
            "name_prefix": "microservices-platform-prod-eks-nodes-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-eks-nodes-sg",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "owned"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-eks-nodes-sg",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-07f6071062a7b3168",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f6071062a7b3168",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f020a2737bdbe0a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "microservices-platform-prod-rds-20251210093704906000000012",
            "name_prefix": "microservices-platform-prod-rds-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-rds-sg",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-rds-sg",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to communicate with worker nodes",
            "from_port": 1025,
            "id": "sgrule-4134294881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f020a2737bdbe0a",
            "security_group_rule_id": "sgr-062fe1da12a727520",
            "self": false,
            "source_security_group_id": "sg-0a82563f538c07e8a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-3741847062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a82563f538c07e8a",
            "security_group_rule_id": "sgr-078a10308debf77d5",
            "self": false,
            "source_security_group_id": "sg-01f020a2737bdbe0a",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-09ffa33eda5c667cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ffa33eda5c667cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-1",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-1",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-041914bd41719d964",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041914bd41719d964",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-2",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-eks-2",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-053e991a1cd14f187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053e991a1cd14f187",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-1",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-1",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0538557ffd496428b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0538557ffd496428b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-2",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-private-rds-2",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-056f6a43789020d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f6a43789020d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-1",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-1",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0d584ff3192cc9ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d584ff3192cc9ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-2",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-public-2",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:vpc/vpc-0f8d89e8b0dd8a4f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d28b799441298309",
            "default_route_table_id": "rtb-0a76449aa10603a26",
            "default_security_group_id": "sg-017249b48176d08d4",
            "dhcp_options_id": "dopt-06d3bb3b873c17e92",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8d89e8b0dd8a4f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a76449aa10603a26",
            "owner_id": "131674823919",
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-0992b6ccf99abb149",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0992b6ccf99abb149",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057f1b7b6a8c0b26f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservi-prod-cluster-2025121009365788030000000c",
            "name_prefix": "microservi-prod-cluster-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservi-prod-cluster",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservi-prod-cluster",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-057f1b7b6a8c0b26f",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057f1b7b6a8c0b26f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0992b6ccf99abb149"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "microservi-prod-node-2025121009365881390000000f",
            "name_prefix": "microservi-prod-node-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservi-prod-node",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservi-prod": "owned"
            },
            "tags_all": {
              "Domain": "apisep25.fr",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservi-prod-node",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservi-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8d89e8b0dd8a4f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3242116630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0992b6ccf99abb149",
            "security_group_rule_id": "sgr-00bd02c1cdce2d52c",
            "self": false,
            "source_security_group_id": "sg-057f1b7b6a8c0b26f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2994350659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-09a5ee77c12cf4cde",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2932930818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0fd867d5ed79e7e52",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3842132667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0562ebcc96662a709",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-742403373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0fec97ded6c57a358",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1058803980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0424248244b91e0aa",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1539121863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-07fac0c21dccc2342",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-957030688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0b9985ef5b017ab14",
            "self": false,
            "source_security_group_id": "sg-0992b6ccf99abb149",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2916252193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-0280778ff68008490",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2375180221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-006ec2e6bb36581dd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-701365330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-057f1b7b6a8c0b26f",
            "security_group_rule_id": "sgr-00837944cfe9ad303",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}